changed aspect color to be less yellow, more orange

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -34,7 +34,7 @@ $font-main: 'Noto Sans', 'Roboto', 'Arial', sans-serif;
 
 // area colors
 $color-main: black;
-$color-aspect: #ffff00;
+$color-aspect: #fddd38;
 
 // text colors
 $color-text: #1d1d1d;
