--- a/css/src/generic.scss
+++ b/css/src/generic.scss
@@ -91,6 +91,7 @@ html {
 }
 
 $content-width: 1200px;
+$header-padding: 2rem;
 $content-padding: 5rem;
 
 body {
@@ -116,7 +117,7 @@ body {
     
     .highlight {
         display: inline-block;
-        max-width: $content-width + 150; width: 100%; padding: $content-padding/2 $content-padding;
+        max-width: $content-width + 150; width: 100%; padding: $header-padding;
         text-align: left;
     
         .logo {
@@ -201,7 +202,15 @@ body {
     /* BANNER */
     
     .banner {
-        max-width: 1920px; width: 100%;
+        display: inline-block;
+        max-width: 1920px; width: 100%; height: 30rem;
+        background-color: $color-aspect;
+        background-position: center; background-repeat: no-repeat;
+        @include background-size(cover);
+        
+        @include ON_MOBILE {
+            display: none;
+        }
     }
 }
     
@@ -216,7 +225,7 @@ body {
 
     ul {
         display: inline-block;
-        max-width: $content-width + 150; width: 100%; padding: 0 $content-padding;
+        max-width: $content-width + 150; width: 100%; padding: 0 $header-padding;
         text-align: left;
 
         > li {
@@ -485,12 +494,13 @@ a, button {
             
                 .headline {
                     list-style: none;
-                    margin-bottom: 1rem;
-                    font-size: 2.5rem; line-height: 1.4em; font-weight: bold;
+                    margin-bottom: .5em;
+                    font-size: 3rem; line-height: 1.5em; font-weight: bold;
                 }
 
                 .link {
-                    font-size: 1.8rem; line-height: 1.4em;
+                    padding: .1em 0;
+                    font-size: 2.3rem; line-height: 1.5em;
 
                     a {
                         font-weight: normal; color: currentColor; text-decoration: none;
