--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -28,6 +28,7 @@ $font-main: 'Noto Sans', 'Roboto', 'Arial', sans-serif;
 // area colors
 $color-main: black;
 $color-aspect: #fddd38;
+$color-aspect-sub: #fdc038;
 
 // text colors
 $color-text: #1d1d1d;
@@ -39,5 +40,6 @@ $color-text: #1d1d1d;
 @import 'reset';
 @import 'fonts';
 @import 'generic';
+@import 'header';
 @import 'navigation';
 @import 'footer';
