--- a/css/src/navigation.scss
+++ b/css/src/navigation.scss
@@ -22,124 +22,131 @@
     }
 }
 
+@mixin desktop-dropdown-visible {
+    width: auto; height: auto; padding: .5rem 0;
+    visibility: visible; opacity: 1;
+    overflow: inherit;
+    @include transition(0s);
+}
+
 #nav {
     position: relative; z-index: 9999;
-    width: 100%; margin-bottom: $content-padding;
-    background-color: $color-main;
-    text-align: center;
     @include user-select(none);
+    
+    @include ON_DESKTOP {
+        width: 100%; margin-bottom: $content-padding;
+        background-color: $color-main;
+        text-align: center;
 
-    > .main {
-        display: inline-block; position: relative;
-        max-width: $content-width + 150; width: 100%; padding: 0 $header-padding;
-        text-align: left;
+        > .main {
+            display: inline-block; position: relative;
+            max-width: $content-width + 150; width: 100%; padding: 0 $header-padding;
+            text-align: left;
 
-        > li {
-            position: relative; vertical-align: bottom;
-            list-style: none;
-            display: inline-block;
+            > li {
+                position: relative; vertical-align: bottom;
+                list-style: none;
+                display: inline-block;
 
-            > a {
-                display: inline-block; position: relative; z-index: 1; vertical-align: bottom;
-                padding: 2rem 1.8rem;
-                font-size: 2.4rem; line-height: 1em; color: $color-aspect; text-decoration: none;
+                > a {
+                    display: inline-block; position: relative; z-index: 1; vertical-align: bottom;
+                    padding: 2rem 1.8rem;
+                    font-size: 2.4rem; line-height: 1em; color: $color-aspect; text-decoration: none;
 
-                &:hover,
-                &:focus {
-                    outline: none;
-                    color: $color-main;
-                    @include linear-gradient(45deg, $color-aspect 0%, $color-aspect-sub 100%);
+                    &:hover,
+                    &:focus {
+                        outline: none;
+                        color: $color-main;
+                        @include linear-gradient(45deg, $color-aspect 0%, $color-aspect-sub 100%);
+                    }
+
+                    &.home-btn {
+
+                        svg {
+                            display: inline-block; vertical-align: baseline;
+                            width: 1em; height: 1em;
+                            fill: currentColor;
+                        }
+                    }
                 }
-                
-                &.home-btn {
-                    
-                    svg {
-                        display: inline-block; vertical-align: baseline;
-                        width: 1em; height: 1em;
-                        fill: currentColor;
+            }
+
+            > li:hover,
+            > li:focus-within {
+                > a {
+                    background-color: $color-aspect;
+                    color: $color-main;
+                }
+            }
+        }
+
+        .dropdown-indicator {
+            display: inline-block; vertical-align: middle;
+            width: 0; height: 0; 
+            border-left: .3em solid transparent;
+            border-right: .3em solid transparent;
+            border-top: .3em solid currentColor;
+        }
+
+        // general properties of a dropdown menu
+        .dropdown {
+            @include main-section-shadow;
+            position: absolute;
+            max-width: 30rem; min-width: 25rem; width: 0; max-height: 80rem; height: 0; padding: 0;
+            background-color: $color-aspect; visibility: hidden; opacity: 0;
+            overflow: hidden;
+            @include linear-gradient(135deg, $color-aspect 0%, $color-aspect-sub 100%);
+            @include transition(0s .2s, opacity 0s);
+
+            &.depth-1 {
+                top: 100%; left: 0; z-index: 2;
+            }
+
+            &.depth-2 {
+                top: 0; left: 100%; z-index: 3;
+            }
+
+            .dropdown-indicator {
+                float: right;
+                @include transform(rotate(-90deg));
+            }
+
+            li {
+                position: relative;
+                list-style: none;
+                margin: 0; padding: 0;
+
+                a {
+                    display: inline-block;
+                    width: 100%; padding: 1.2rem;
+                    font-size: 1.7rem; line-height: 1.3em; color: $color-main; text-decoration: none;
+
+                    &:hover,
+                    &:focus {
+                        background-color: $color-main; outline: none;
+                        color: $color-aspect;
                     }
                 }
             }
         }
-        
-        > li:hover,
-        > li:focus-within {
-            > a {
-                background-color: $color-aspect;
-                color: $color-main;
-            }
+
+        // trigger the showing of a dropdown menu
+        a:hover ~ .dropdown,
+        a:focus ~ .dropdown,
+        button:hover ~ .dropdown,
+        button:focus ~ .dropdown,
+        .dropdown.show,
+        .dropdown:hover {
+            @include desktop-dropdown-visible;
+        }
+
+        // split off, because older browsers do not support it
+        .dropdown:focus-within {
+            @include desktop-dropdown-visible;
         }
     }
-    
-    .dropdown-indicator {
-        display: inline-block; vertical-align: middle;
-        width: 0; height: 0; 
-        border-left: .3em solid transparent;
-        border-right: .3em solid transparent;
-        border-top: .3em solid currentColor;
-    }
-    
-    // general properties of a dropdown menu
-    .dropdown {
-        @extend %main-section-shadow;
-        position: absolute;
-        max-width: 30rem; min-width: 25rem; width: 0; max-height: 80rem; height: 0; padding: 0;
-        background-color: $color-aspect; visibility: hidden; opacity: 0;
-        overflow: hidden;
-        @include linear-gradient(135deg, $color-aspect 0%, $color-aspect-sub 100%);
-        @include transition(0s .2s, opacity 0s);
-        
-        &.depth-1 {
-            top: 100%; left: 0; z-index: 2;
-        }
-        
-        &.depth-2 {
-            top: 0; left: 100%; z-index: 3;
-        }
-        
-        .dropdown-indicator {
-            float: right;
-            @include transform(rotate(-90deg));
-        }
-        
-        li {
-            position: relative;
-            list-style: none;
-            margin: 0; padding: 0;
-        
-            a {
-                display: inline-block;
-                width: 100%; padding: 1.2rem;
-                font-size: 1.7rem; line-height: 1.3em; color: $color-main; text-decoration: none;
-                
-                &:hover,
-                &:focus {
-                    background-color: $color-main; outline: none;
-                    color: $color-aspect;
-                }
-            }
-        }
-    }
-    
-    @mixin dropdown-visible {
-        width: auto; height: auto; padding: .5rem 0;
-        visibility: visible; opacity: 1;
-        overflow: inherit;
-        @include transition(0s);
-    }
-    
-    // trigger the showing of a dropdown menu
-    a:hover ~ .dropdown,
-    a:focus ~ .dropdown,
-    button:hover ~ .dropdown,
-    button:focus ~ .dropdown,
-    .dropdown.show,
-    .dropdown:hover {
-        @include dropdown-visible;
-    }
-    
-    // split off, because older browsers do not support it
-    .dropdown:focus-within {
-        @include dropdown-visible;
+
+    @include ON_MOBILE {
+        display: none;
     }
 }
