--- a/css/src/footer.scss
+++ b/css/src/footer.scss
@@ -1,5 +1,6 @@
 #footer {
-    width: 100%; margin-top: 5rem; padding-top: .5rem;
+    @include main-section-shadow;
+    width: 100%; margin-top: 5rem;
     background-color: $color-main;
     color: $color-aspect; text-align: center;
         
