--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -35,7 +35,7 @@
                     text-decoration: none;
 
                     span {
-                        background-color: $color-aspect;
+                        background-color: transparent;
                         color: $color-main;
                     }
                 }
